--- a/css.styl
+++ b/css.styl
@@ -1,12 +1,16 @@
-$light-highlight = #f4f4f4
-$med-highlight =  #2980b9
-$dark-highlight = #2980b9
+$light-highlight = #F4F4F4
+$med-highlight =  #2980B9
+$dark-highlight = #2980B9
+$link = #4789AC
 
-$uptodate =  #2ecc71
-$uptodate-border = #28b362
+$greedy = #E67E22
+$greedy-border = #D35400
 
-$outofdate = #e74c3c
-$outofdate-border = #c0392b
+$uptodate =  #2ECC71
+$uptodate-border = #28B362
+
+$outofdate = #E74C3C
+$outofdate-border = #C0392B
 
 .package
   overflow: hidden
@@ -73,10 +77,13 @@ table
 
   .name
     width: 30%
+
   .license
     width: 20%
+
   .status
     width: 20%
+
   .version
     width: 10%
 
@@ -88,13 +95,28 @@ table
 
   td,
   th
+    border: 0
     padding: 6px 13px
     text-align: left
-    border: 0
 
     &.version
       text-align: right
 
   tr.outofdate
-    font-weight: bold
     color: $outofdate
+    font-weight: bold
+
+  tr.greedy
+    color: $greedy
+    font-weight: bold
+
+  tfoot.more a
+    border: 1px solid lighten($link, 60%)
+    display: block
+    margin-top: 20px
+    padding: 10px
+    text-align: center
+    width: 100%
+
+    &:hover
+      text-decoration: none
